--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,24 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.mainBody{
+  background: grey;
+  height: 100%;
+  width: 100%;
+  padding: 23px;
+}
+
+.mainContainer{
+  width: 100%;
+  background-color: #fafafa;
+  height: 100%;
+  padding: 85px 20px 20px 20px;
 }
