--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,30 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100vh;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
-.mainBody{
+.mainBody {
   background: grey;
   height: 100%;
   width: 100%;
   padding: 23px;
 }
 
-.mainContainer{
+.mainContainer {
   width: 100%;
   background-color: #fafafa;
   height: 100%;
   padding: 85px 20px 20px 20px;
+}
+
+.successButton {
+  background-color: #4CAF50 !important;
 }
